@@ -3633,6 +3633,33 @@ SEXP R_igraph_transitivity_local_undirected(SEXP graph, SEXP pvids) {
   return result;
 }
 
+SEXP R_igraph_transitivity_barrat(SEXP graph, SEXP pvids, SEXP pweights) {
+  
+  igraph_t g;
+  igraph_vs_t vs;
+  igraph_vector_t weights;
+  igraph_vector_t res;
+  SEXP result;
+  
+  R_igraph_before();
+  
+  R_SEXP_to_igraph(graph, &g);
+  R_SEXP_to_igraph_vs(pvids, &g, &vs);
+  R_SEXP_to_vector(pweights, &weights);
+  igraph_vector_init(&res, 0);  
+  igraph_transitivity_barrat(&g, &res, vs, &weights);
+  
+  PROTECT(result=NEW_NUMERIC(igraph_vector_size(&res)));
+  igraph_vector_copy_to(&res, REAL(result));
+  igraph_vector_destroy(&res);
+  igraph_vs_destroy(&vs);
+  
+  R_igraph_after();
+  
+  UNPROTECT(1);
+  return result;
+}
+
 SEXP R_igraph_transitivity_local_undirected_all(SEXP graph) {
   
   igraph_t g;
